--- a/SuaLianWB/app/src/main/AndroidManifest.xml
+++ b/SuaLianWB/app/src/main/AndroidManifest.xml
@@ -100,6 +100,9 @@
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
 
         </activity>
+        <activity android:name=".test.TestPath">
+
+        </activity>
 
         <uses-permission android:name="android.permission.BIND_ACCESSIBILITY_SERVICE" />
         <service
