--- a/SuaLianWB/app/src/main/AndroidManifest.xml
+++ b/SuaLianWB/app/src/main/AndroidManifest.xml
@@ -39,6 +39,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".activity.MainActivity"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme">
             <intent-filter>
