--- a/AndroidLearn/app/build.gradle
+++ b/AndroidLearn/app/build.gradle
@@ -3,16 +3,13 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
-    sourceSets.main {
-        jniLibs.srcDirs = ['jniLibs']  // <-- Set your folder here!
-    }
 
     defaultConfig {
-        applicationId "com.zy.sualianwb"
+        applicationId "com.zy.androidlearn"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 666
-        versionName "666"
+        versionCode 1
+        versionName "1.0"
     }
     buildTypes {
         release {
@@ -22,16 +19,8 @@ android {
     }
 }
 
-
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.github.bumptech.glide:glide:3.6.1'
-    compile 'com.android.support:recyclerview-v7:23.1.1'
-    compile 'com.squareup.okhttp:okhttp:2.0.0'
-    compile 'joda-time:joda-time:2.3'
-    compile files('libs/lite-orm.jar')
-    compile files('libs/gson-2.4.jar')
-    compile files('libs/umeng-update-v2.6.0.1.jar')
 }
